2009-07-09  Mario Torre  <neugens@aicas.com>

    * gnu/testlet/TestSecurityManager:
      TestSecurityManager has to delegate some functionality to the
      Policy to make sure privileged system code works.

2009-07-09  Mario Torre  <neugens@aicas.com>

    * gnu/testlet/java/text/SimpleDateFormat/equals:
      Remove obsolete check.

2009-07-08  Mario Torre  <neugens@aicas.com>

    * gnu/testlet/javax/imageio/spi/ServiceRegistry/lookupProviders:
      Use the classloader of the current context, so that the test works
      when classloader other than the system classloader was used to load the
      test.

2009-07-03  Mario Torre  <neugens@aicas.com>

    * gnu/testlet/java/util/ArrayList/AcuniaArrayListTest:
      fix ConcurrentModificationException should be thrown when altering the
      capacity of the array.

2009-05-17  Fabien DUMINY  <fduminy@jnode.org>
    * gnu/testlet/runner/HTMLGenerator.java
      gnu/testlet/runner/Mauve.java
      gnu/testlet/runner/RunResult.java
      gnu/testlet/runner/XMLReportConstants.java
      gnu/testlet/runner/XMLReportParser.java
      gnu/testlet/runner/XMLReportWriter.java :
            Moved getting of system properties from Mauve to RunResult to allow exportation
            in xml and html format (or any other format ...) 
            + added support for custom system properties (for people using mauve APIs for their specific needs).
    
    * gnu/testlet/runner/MauveTests.java :
            Added tests for the above features
    
    * gnu/testlet/runner/compare/ComparisonWriter.java
      gnu/testlet/runner/compare/HTMLComparisonWriter.java
      gnu/testlet/runner/compare/ReportComparator.java
      gnu/testlet/runner/compare/RunComparison.java
      gnu/testlet/runner/compare/TextComparisonWriter.java :
            Added comparison of (default and custom) system properties
    
    * Added javadoc to some of the above java classes.

2009-05-09  Fabien DUMINY  <fduminy@jnode.org>